@@ -41,6 +41,7 @@ typedef struct
   const devsdk_nvpairs *params;
   devsdk_http_method method;
   devsdk_http_data data;
+  const char *content_type;
 } devsdk_http_request;
 
 typedef struct
